--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <a href="agama.html">Agama</a>
         <a href="ppkn.html">PPKN</a>
         <a href="bahasaindonesia.html">Bahasa Indonesia</a>
+        <a href="english.html">English</a>
+        <a href="ips.html">Ips</a>
+        <a href="mandarin.html">Mandarin</a>
     </header>
 
     <h1>Ini adalah halaman Home</h1>
