--- a/mandarin.html
+++ b/mandarin.html
@@ -12,11 +12,28 @@
         margin: 0;
         padding: 0;
         font-family: Arial, Helvetica, sans-serif;
-    }
-    header {
-        color: rgb(255, 255, 255);
-        font-size: large;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+       }
+        header {
+            background-color: rgb(92, 47, 218);
+            padding: 10px 0;
+            text-align: center;
+        }
+        header a {
+            color:antiquewhite;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: large;
+            transition: color 0.2s ease-in;
+        }
+        header a:hover {
+            color:cyan;
+        }
+        h1 {
+            text-align: center;
+            margin-top: auto;
+            font-size:larger;
+            color:rgb(255, 255, 255);
+   
     }
     </style>
     <header>
