--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
     <title>Bar Navigasi</title>
 
 <style>
-        body {
-            font-family: 'Courier New', Courier, monospace;
-            margin: 0;
-            padding: 0;
-            background-color: darkolivegreen;
-        }
+         }
         header {
-            background-color: rgb(188, 214, 171);
+            background-color: rgb(92, 47, 218);
             padding: 10px 0;
             text-align: center;
         }
@@ -32,7 +27,7 @@
             text-align: center;
             margin-top: auto;
             font-size:larger;
-            color:dodgerblue;
+            color:rgb(255, 255, 255);
         }
     </style>
 </head>
